# Thermall

./: CMakeLists.txt  README.md
.github/workflows/: deploy.yml
include/: line_text.h  terminal.h
src/: main.c  terminal.c  text_buffer.c  text_buffer.h  text_line.c  thermall.c  thermall.h
